<resources>
    <string name="app_name">DocPocket</string>
    <string name="lenguajeJava">Java</string>
    <string name="lenguajeCSharp">C#</string>
    <string name="title_activity_tab_opciones">TabOpciones</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email:</string>
    <string name="tituloMensaje">Describenos tu problema:</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="guardarAjustes">Guardar Ajustes</string>
    <string name="lenguajeDefecto">Lenguaje por defecto</string>
    <string name="modoOscuro">Modo oscuro</string>
    <string name="textoInicioSesion">Iniciar sesión con Google</string>
    <string name="mensajeDialogo">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="tituloDialogo">Cerrar sesión</string>
    <string name="botonPositivoDoalogo">Si</string>
    <string name="botonNegativoDialogo">No</string>
    <string name="textoCerrarSesion">Cerrar Sesión con Google</string>
    <string name="textoSesionCerrada">Se ha cerrado la sesión</string>
    <string name="buscarStackOverFlow">Buscar en StackOverflow</string>
    <string name="buscarGoogle">Buscar en Google</string>
    <string name="buscarYoutube">Buscar en Youtube</string>
    <string name="tituloEscaner">Error</string>
    <string name="mensajeEscaner">No se ha podido encontrar la clase a partir de la foto escaneada. Intentelo de nuevo con una nueva foto</string>
    <string name="botonOK">OK</string>
    <string name="transicionNombreClase">nombreClaseTransicion</string>
    <string name="transicionImagen">imagenTransicion</string>
    <string name="textoEscaneando">Escaneando….</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
