<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:padding="5dp"
    tools:context=".ActividadBusquedaClases">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="118dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="143dp" />

    <TextView
        android:id="@+id/idTituloVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/negro"
        android:textSize="20sp"
        android:transitionName="@string/transicionNombreClase"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/idImagenFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="@string/transicionImagen"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/botonStackOverflow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buscarStackOverFlow"
        android:text="@string/buscarStackOverFlow"
        android:layout_marginTop="100dp"
        android:textSize="15sp"
        android:background="@drawable/boton_stackoverflow"
        android:drawableStart="@drawable/icono_stackoverflow"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTituloVariable" />

    <Button
        android:id="@+id/botonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buscarGoogle"
        android:text="@string/buscarGoogle"
        android:background="@drawable/boton_google"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="5dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/icono_google"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonStackOverflow" />

    <Button
        android:id="@+id/botonYoutube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buscarYoutube"
        android:text="@string/buscarYoutube"
        android:layout_marginTop="50dp"
        android:background="@drawable/boton_youtube"
        android:drawableStart="@drawable/icono_youtube"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonGoogle" />
</androidx.constraintlayout.widget.ConstraintLayout>